<resources>
    <string name="app_name">MobileAppDevProj</string>
    <string name="test_string">String test</string>

    <!-- WELCOME PAGE -->
    <string name="loginPage">Login</string>
    <string name="signUpPage">Sign Up</string>

    <!--REGISTRATION STRINGS-->
    <string name="registration_title">Create an Account,</string>
    <string name="signUpToContinue">Sign up to Get Started!</string>
    <string name="fullname">Full Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="contactNum">Contact Number:</string>
    <string name="password">Password:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="loginText">Login</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>

    <!--LOGIN STRINGS-->
    <string name="welcomeLogin">Welcome,</string>
    <string name="signToContinue">Sign in to Continue!</string>
    <string name="login_title">Login Account</string>
    <string name="login_email">Email:</string>
    <string name="login_password">Password:</string>
    <string name="loginbtn">Login</string>
    <string name="or">OR</string>
    <string name="google">Sign in with Google</string>
    <string name="facebook">Sign in with Facebook</string>
    <string name="accountRegister">"Don't have an account yet?"</string>
    <string name="signup"><u>Sign Up Now!</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- FRAGMENT HOME -->
    <string name="title_home">Aice Ice Cream Flavors</string>

    <!-- FRAGMENT PROFILE -->
    <string name="profile_email">Email:</string>
    <string name="profile_address">Address:</string>
    <string name="profile_num">Contact Number:</string>
    <string name="logout">Logout</string>
</resources>