<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#240555">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="281dp"
        android:layout_height="148dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@drawable/aice_logo_white" />

    <TextView
        android:id="@+id/createYourAccount"
        android:layout_width="317dp"
        android:layout_height="34dp"
        android:text="@string/registration_title"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343"
        android:gravity="center_horizontal"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="337dp"
        android:layout_height="288dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/contactNum"
            android:inputType="number"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="120dp"
        android:layout_height="49dp"
        android:text="@string/sign_in_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914" />

</androidx.constraintlayout.widget.ConstraintLayout>