<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/wave"
            android:layout_width="match_parent"
            android:layout_height="332dp"
            android:layout_marginTop="-130dp"
            app:srcCompat="@drawable/wave" />


    </LinearLayout>


    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248"
        app:srcCompat="@drawable/aice_logo_blue" />

    <TextView
        android:id="@+id/welcomeRegisterText"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="530dp"
        android:text="@string/registration_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpNowText"
        android:layout_width="317dp"
        android:layout_height="34dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="480dp"
        android:text="@string/signUpToContinue"
        android:textColor="#D3D3D3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="265dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_person_icon"
            android:drawableLeft="@drawable/custom_person_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />



        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_home_icon"
            android:drawableLeft="@drawable/custom_home_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawableLeft="@drawable/custom_phone_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/contactNum"
            android:inputType="number"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawableLeft="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawableLeft="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawableLeft="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:background="@drawable/custom_button"
        android:text="@string/sign_in_btn"
        app:backgroundTint="#240555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934">

        <TextView
            android:id="@+id/alreadyHaveAnAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingRight="10dp"
            android:text="@string/alreadyHaveAnAccount"
            android:textAlignment="center"
            android:textColor="#240555" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in_btn"
            android:textAlignment="center"
            android:textColor="#240555"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>